--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -11,6 +11,7 @@
     font-size: var(--size-2xl);
     color: var(--color-ligh);
     text-transform: capitalize;
+    color: var(--color-light);
 }
 
 .contact__description {
