--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,5 +1,10 @@
+footer {
+    margin-top: 1rem;
+    margin-bottom: 1em;
+    font-size: var(--size-xs);
+}
+
 .footer__title {
-    font-size: var(-size-xs);
     font-weight: 400;
     color: var(--color-slate-600);
     text-align: center;
@@ -7,3 +12,44 @@
     letter-spacing: 0.2em;
     user-select: none;
 }
+
+.footer__wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footer__img {
+    width: 4em;
+    height: 4em;
+    align-content: center;
+}
+
+.footer__logos {
+    display: flex;
+    gap: 1em
+}
+
+/* xs */
+/* @media (min-width: 475px) {} */
+
+/* sm */
+/* @media (min-width: 640px) {} */
+
+/* md */
+/* @media (min-width: 768px) {} */
+
+/* lg */
+@media (min-width: 1024px) {
+    footer {
+        font-size: var(--size-base);
+    }
+}
+
+/* xl */
+/* @media (min-width: 1280px) {} */
+
+/* 2xl */
+/* @media (min-width: 1536px) {} */
+
+    
