--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@
     --color-slate-400: #94a3b8;
     --color-slate-600: #475569;
     --color-slate-800: #1e293b;
-    --color-primary: #244855; /* rgb(163, 230, 53) */ 
-    --color-secondary: #cda235 /* 	rgb(251, 191, 36) */;
+    --color-primary: #244855;
+    --color-secondary: #cda235; /* 	rgb(251, 191, 36) */;
     --color-primary-light: #f8eee0;
     --color-primary-shadow: rgb(163, 230, 53, 0.4);
     --color-primary-shadow-light: rgb(163, 230, 53, 0.1);
@@ -69,7 +69,7 @@ strong {
     color: var(--color-secondary);
 }
 
-/* variables inside the body has more specificity than those inside the root */
+/* variables inside the body has more specificity than those inside the root (position) */
 .light-mode {
     --color-light: #030712;
     --color-dark: #f1f5f9;
