--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -82,7 +82,8 @@
         grid-template-areas: 
         'image1 content1'
         'content2 image2'
-        'image3 content3';
+        'image3 content3'
+        'content4 image4';
         place-items: center;
     }
 
@@ -96,6 +97,10 @@
 
     .work__image3 {
         grid-area: image3;
+    }
+    
+    .work__image4 {
+        grid-area: image4;
     }
 
     .work__project {
